fix: java api change Path.of to Paths.get